--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-dark:  255, 255, 255; 
+    --color-dark: 255, 255, 255;
     --color-light: 10, 10, 20;
   }
 }
@@ -35,6 +35,7 @@ option {
   from {
     transform: translateY(10rem);
   }
+
   to {
     transform: translateY(0);
   }
@@ -246,7 +247,7 @@ option {
   font-weight: bold;
   display: -webkit-box;
   -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;  
+  -webkit-box-orient: vertical;
   overflow: hidden;
   color: rgba(var(--color-dark), 0.8)
 }
@@ -263,7 +264,7 @@ option {
   left: 0;
   width: 100%;
   border-width: 0;
-  box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14), 0px 1px 8px 0px rgba(0,0,0,0.12);
+  box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
   animation-name: enter;
   animation-duration: 0.6s;
   z-index: 10;
@@ -275,7 +276,8 @@ option {
     max-width: 30rem;
     left: 0%;
     top: 0;
-    border-radius: 8px;;
+    border-radius: 8px;
+    ;
   }
 }
 
@@ -382,14 +384,14 @@ option {
   top: 1.5m;
   left: calc(50% - 5rem);
   border-radius: 2px;
-  box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14), 0px 1px 8px 0px rgba(0,0,0,0.12);
+  box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
 }
 
 .overlay__data {
   font-size: 0.9rem;
   display: -webkit-box;
   -webkit-line-clamp: 6;
-  -webkit-box-orient: vertical;  
+  -webkit-box-orient: vertical;
   overflow: hidden;
   color: rgba(var(--color-dark), 0.8)
 }
@@ -433,6 +435,6 @@ option {
   width: 100vw;
 }
 
-.overlay[open] ~ .backdrop {
+.overlay[open]~.backdrop {
   display: block;
 }
